# sokrates

./: .cursorrules  .gitignore  CHANGELOG.md  EXPERIMENTS.md  README.md  cursorrules.txt  pyproject.toml  requirements.txt
configs/: evaluation.yaml  model.yaml  toy_test.yaml  training.yaml
docs/: 00_index.md  01_title_and_abstract.md  02_paper_plan.md  03_project_plan.md  04_oak_connection_notes.md  05_technical_spec.md  06_glossary.md  07_implementation_guide.md  08_api_reference.md  09_session_log.md  10_experimental_design.md  11_dpo_runtime_notes.md  12_smoke_test.md  13_two_stage_pipeline.md  14_debugging_session_dec10.md  15_optimization_plan.md  16_prompt_evolution.md  17_vllm_inference_config.md  18_hyperparameter_search.md  19_experimental_approach.md  20_ablation_studies.md  21_future_experiments_plan.md
paper/: A_submit.md  Makefile  PAPER_STATUS.md  references.bib  sokrates.tex  sokrates_single.tex
paper/algorithms/: oak_loop.tex
paper/docs/: 02_improvement.md  03_improvement.md  05_improvement.md
paper/figures/: architecture.tex  architecture_standalone.tex  architecture_v2.tex  architecture_v2_standalone.tex  full_prompt.tex  trace_example.tex
paper/tables/: ablations.tex  ablations_template.tex  hyperparams.tex  main_results.tex  main_results_template.tex  options.tex  transfer.tex
paper/tools/: inline_tex.py
results/: README.md  all_results_summary.json
results/analysis/: ablation_table.tex  hyperparameter_search.csv  hyperparameter_search.json  main_results_table.tex  results.json  results_table.tex
results/examples/: ablation_answer_only_dpo_samples.jsonl  prontoqa_dpo_iter3_samples.jsonl  prontoqa_sft_samples.jsonl
scripts/: README.md  README_baselines.md  ablation_1_raw_cot.sh  ablation_2_action_only.sh  ablation_3_answer_only_dpo.sh  ablation_prepare_data.py  analyze_results.py  eval_all_checkpoints.sh  eval_baselines.sh  eval_baselines_no_training.py  eval_transfer.sh  evaluate.py  generate_paper_figures.py  generate_traces.py  generate_traces_vllm.py  merge_lora_adapter.py  plot_training.py  prepare_data.py  run_folio_full.sh  run_folio_transfer.sh  run_full_pipeline.sh  run_oak_dpo.py  run_oak_loop.sh  run_prontoqa_remaining.sh  run_vllm_parallel.sh  save_all_results.sh  train_dpo_answer_only.py  train_dpo_from_traces.py  train_sft.py  upload_folio_models.sh
src/: __init__.py
src/data/: __init__.py  (+2 more)
tests/: __init__.py  test_metrics.py  test_solvers.py  test_structures.py
(+69 files in other folders)
